# imgoptimize

./: .gitignore  README.md  pyproject.toml
src/imgoptimize/: __init__.py  cli.py
