[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "imgoptimize"
version = "1.0.0"
description = "Herramienta CLI para optimizar imágenes usando Pillow"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Angel", email = "146035436+angelcgar@users.noreply.github.com"}
]
keywords = ["image", "optimization", "webp", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
imgoptimize = "imgoptimize.cli:main"

[project.urls]
Homepage = "https://github.com/angelcgar/imgoptimize"
